added product services and operations

--- a/BigBazaar.Web/Views/Category/Create.cshtml
+++ b/BigBazaar.Web/Views/Category/Create.cshtml
@@ -7,12 +7,12 @@
 
 <form method="post">
     <label>Name</label>
-    <input type="type" name="Name" value="" />
+    <input name="Name"/>
 
     <br />
 
     <label>Description</label>
-    <input type="type" name="Description" value="" />
+    <input name="Description"/>
 
     <br />
 
